Alignment fix 2

--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ header #logo {
 /*--------------------------------------------*/
 
 .leftAligned {
-    display: inherit;
+    display: inline;
 }
 
 #content img {
